# BitcoinNodeWallet-PapasRusticas

./: .gitignore  Cargo.toml  README.md  headers.csv  nodo.conf  test_log.txt
node/: Cargo.toml  nodo.conf
node/src/: lib.rs  node.rs  nodo.conf  run.rs  wallet.rs
node/tests/: tests.rs
src/: app_run.rs  blockchain.rs  config.rs  error_handling.rs  hex_bytes_to_string.rs  lib.rs  loading_screen.rs  log.rs  main.rs  merkle_tree_label.rs  messages.rs  mock_tcp_stream.rs  node.rs  node_log.txt  nodo.conf  thread_pool.rs  tx_info_widget.rs  tx_info_widgets.rs  ui.glade  ui.glade~  ui.rs  utils.rs  utxo_info_widget.rs  variable_length_integer.rs  wallet.rs  wallet_actions.rs  wallet_adder.rs  wallet_overview.rs  wallet_persistance.rs  wallet_sections.rs  wallet_send.rs  wallet_transactions.rs
src/blocks/: blockchain.rs  mod.rs  proof.rs  transaction.rs
src/glade/: #ui.glade#  ui.glade  ui.glade~
src/messages/: block_headers_message.rs  block_message.rs  get_block_headers_message.rs  get_data_message.rs  header_message.rs  inv_message.rs  message.rs  message_trait.rs  mod.rs  not_found_message.rs  tx_message.rs  util.rs  utils.rs  verack_message.rs  version_message.rs
src/node/: block_downloader.rs  data_handler.rs  data_persistance.rs  handle_messages.rs  handshake.rs  initial_block_download.rs  message_receiver.rs  utxo_set.rs
src/ui/: mod.rs  ui.rs
src/ui_sections/: mod.rs  wallet_adder.rs  wallet_overview.rs  wallet_send.rs  wallet_transactions.rs
src/utils/: btc_errors.rs  log.rs  (+8 more)
tests/: tests.rs  transaction.rs
user_interface/: Cargo.toml  ui.glade
(+52 files in other folders)
