[package]
name = "proyecto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rand = "0.8.5"
bitcoin_hashes = "0.12.0"
secp256k1 = { version = "0.27.0", features = ["bitcoin-hashes", "global-context"] }
bs58 = "0.5.0"


[workspace]

members = [
    "user_interface",
]