[package]
name = "proyecto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {git = "https://github.com/gtk-rs/gtk3-rs.git" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gio" }
glib = "0.17.10"
node = { path = "./node" }

[workspace]

members = [
    "node"
]